# ai-dev-local

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AI_Dev_Local_One_Pager.md  LITELLM_UPDATES.md  README.md  docker-compose.mcp.yml  docker-compose.yml  index.html  litellm-config-example.yaml  mkdocs.yml  one_pager_sales_document.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
CONFIGURATION/: index.html
DOCUMENTATION_UPDATES_SUMMARY/: index.html
IDE_MCP_SETUP/: index.html
MCP_SERVERS_FUNCTIONALITY_TABLE/: index.html
PHASE_3_MCP_INTEGRATION/: index.html
changelog/: index.html
cli-reference/: index.html
configs/: litellm_config.yaml  litellm_config.yaml.backup_20250727_171025
configs/flowise/: README.md  flowise.json  init.js
development/: index.html
docker/: init-db.sql
docker/dashboard/: Dockerfile  entrypoint.sh  health.sh  index.html  index.html.template  nginx.conf
docker/mcp-gateway/: Dockerfile  app.py  requirements.txt
docker/mcp-github/: Dockerfile  package.json  wrapper.js
docker/mcp-postgres/: Dockerfile  package.json  wrapper.js
docker/mkdocs/: Dockerfile
docs/: CONFIGURATION.md  DOCUMENTATION_UPDATES_SUMMARY.md  IDE_MCP_SETUP.md  MCP_SERVERS_FUNCTIONALITY_TABLE.md  PHASE_3_MCP_INTEGRATION.md  changelog.md  cli-reference.md  development.md  index.md
docs/getting-started/: installation.md  quick-start.md
docs/mcp/: deployment.md  github.md  gitlab.md  postgresql.md  sonarqube.md
docs/services/: flowiseai.md  langfuse.md  litellm.md  ollama.md  open-webui.md
examples/mcp-postgres/: claude_desktop_config.json  mcp-config.json  mcp-http-config.json  mcp.json
examples/mcp-postgres/clients/: mcp_postgres_client.py  test_postgres_mcp.py
examples/mcp-postgres/configs/: claude-desktop.json  vscode.json
examples/mcp-postgres/docs/: test_users_results.md
examples/vscode-extension-mcp-postgres/: README.md  package.json
examples/vscode-extension-mcp-postgres/src/: extension.ts  mcpClient.ts  mcpExplorerProvider.ts
getting-started/installation/: index.html
getting-started/quick-start/: index.html
inputs/: README.md
licenses/: DOCKER_LICENSE  FLOWISEAI_LICENSE  LANGFUSE_LICENSE  LITELLM_LICENSE  OLLAMA_LICENSE  OPEN_WEBUI_LICENSE  POSTGRESQL_LICENSE  PYTHON_DEPENDENCIES_LICENSE  README.md  REDIS_LICENSE
mcp/deployment/: index.html
mcp/github/: index.html
mcp/gitlab/: index.html
mcp/postgresql/: index.html
mcp/sonarqube/: index.html
scripts/: build-dashboard.sh  mcp-manager.sh  ollama-init.sh
search/: search_index.json
services/flowiseai/: index.html
services/langfuse/: index.html
services/litellm/: index.html
services/ollama/: index.html
services/open-webui/: index.html
src/ai_dev_local/: cli.py
tests/: test_cli.py
